tests/ast_error_description/ast_error_description.exp
Error ----------------------------------------------------------------------------------------------- expression.js:15:2

Cannot cast `[].p` to empty because mixed [1] is incompatible with empty [2].

   expression.js:15:2
   15| ((([]: empty): T).p: empty);
        ^^^^^^^^^^^^^^^^^^

References:
   expression.js:6:14
    6| type T = {p: mixed};
                    ^^^^^ [1]
   expression.js:15:22
   15| ((([]: empty): T).p: empty);
                            ^^^^^ [2]


Error ----------------------------------------------------------------------------------------------- expression.js:15:4

Cannot cast array literal to empty because empty array literal [1] is incompatible with empty [2].

   expression.js:15:4
   15| ((([]: empty): T).p: empty);
          ^^ [1]

References:
   expression.js:15:8
   15| ((([]: empty): T).p: empty);
              ^^^^^ [2]


Error ----------------------------------------------------------------------------------------------- expression.js:16:2

Cannot cast `[...].p` to empty because mixed [1] is incompatible with empty [2].

   expression.js:16:2
   16| ((([1]: empty): T).p: empty);
        ^^^^^^^^^^^^^^^^^^^

References:
   expression.js:6:14
    6| type T = {p: mixed};
                    ^^^^^ [1]
   expression.js:16:23
   16| ((([1]: empty): T).p: empty);
                             ^^^^^ [2]


Error ----------------------------------------------------------------------------------------------- expression.js:16:4

Cannot cast array literal to empty because array literal [1] is incompatible with empty [2].

   expression.js:16:4
   16| ((([1]: empty): T).p: empty);
          ^^^ [1]

References:
   expression.js:16:9
   16| ((([1]: empty): T).p: empty);
               ^^^^^ [2]


Error ----------------------------------------------------------------------------------------------- expression.js:17:2

Cannot cast `[...].p` to empty because mixed [1] is incompatible with empty [2].

   expression.js:17:2
   17| ((([1, 2, 3]: empty): T).p: empty);
        ^^^^^^^^^^^^^^^^^^^^^^^^^

References:
   expression.js:6:14
    6| type T = {p: mixed};
                    ^^^^^ [1]
   expression.js:17:29
   17| ((([1, 2, 3]: empty): T).p: empty);
                                   ^^^^^ [2]


Error ----------------------------------------------------------------------------------------------- expression.js:17:4

Cannot cast array literal to empty because array literal [1] is incompatible with empty [2].

   expression.js:17:4
   17| ((([1, 2, 3]: empty): T).p: empty);
          ^^^^^^^^^ [1]

References:
   expression.js:17:15
   17| ((([1, 2, 3]: empty): T).p: empty);
                     ^^^^^ [2]


Error ----------------------------------------------------------------------------------------------- expression.js:18:2

Cannot cast `((...) => { ... }).p` to empty because mixed [1] is incompatible with empty [2].

   expression.js:18:2
   18| (((() => {}: empty): T).p: empty);
        ^^^^^^^^^^^^^^^^^^^^^^^^

References:
   expression.js:6:14
    6| type T = {p: mixed};
                    ^^^^^ [1]
   expression.js:18:28
   18| (((() => {}: empty): T).p: empty);
                                  ^^^^^ [2]


Error ----------------------------------------------------------------------------------------------- expression.js:18:4

Cannot cast function to empty because function [1] is incompatible with empty [2].

   expression.js:18:4
   18| (((() => {}: empty): T).p: empty);
          ^^^^^^^^ [1]

References:
   expression.js:18:14
   18| (((() => {}: empty): T).p: empty);
                    ^^^^^ [2]


Error ----------------------------------------------------------------------------------------------- expression.js:19:2

Cannot cast `((...) => 42).p` to empty because mixed [1] is incompatible with empty [2].

   expression.js:19:2
   19| (((() => 42: empty): T).p: empty);
        ^^^^^^^^^^^^^^^^^^^^^^^^

References:
   expression.js:6:14
    6| type T = {p: mixed};
                    ^^^^^ [1]
   expression.js:19:28
   19| (((() => 42: empty): T).p: empty);
                                  ^^^^^ [2]


Error ----------------------------------------------------------------------------------------------- expression.js:19:4

Cannot cast function to empty because function [1] is incompatible with empty [2].

   expression.js:19:4
   19| (((() => 42: empty): T).p: empty);
          ^^^^^^^^ [1]

References:
   expression.js:19:14
   19| (((() => 42: empty): T).p: empty);
                    ^^^^^ [2]


Error ----------------------------------------------------------------------------------------------- expression.js:20:2

Cannot cast `((...) => ({...})).p` to empty because mixed [1] is incompatible with empty [2].

   expression.js:20:2
   20| (((() => ({}): empty): T).p: empty);
        ^^^^^^^^^^^^^^^^^^^^^^^^^^

References:
   expression.js:6:14
    6| type T = {p: mixed};
                    ^^^^^ [1]
   expression.js:20:30
   20| (((() => ({}): empty): T).p: empty);
                                    ^^^^^ [2]


Error ----------------------------------------------------------------------------------------------- expression.js:20:4

Cannot cast function to empty because function [1] is incompatible with empty [2].

   expression.js:20:4
   20| (((() => ({}): empty): T).p: empty);
          ^^^^^^^^^^ [1]

References:
   expression.js:20:16
   20| (((() => ({}): empty): T).p: empty);
                      ^^^^^ [2]


Error ----------------------------------------------------------------------------------------------- expression.js:21:2

Cannot cast `(a = 42).p` to empty because mixed [1] is incompatible with empty [2].

   expression.js:21:2
   21| ((((a = 42): empty): T).p: empty);
        ^^^^^^^^^^^^^^^^^^^^^^^^

References:
   expression.js:6:14
    6| type T = {p: mixed};
                    ^^^^^ [1]
   expression.js:21:28
   21| ((((a = 42): empty): T).p: empty);
                                  ^^^^^ [2]


Error ----------------------------------------------------------------------------------------------- expression.js:21:5

Cannot cast `a = 42` to empty because number [1] is incompatible with empty [2].

   expression.js:21:5
   21| ((((a = 42): empty): T).p: empty);
           ^^^^^^

References:
   expression.js:21:9
   21| ((((a = 42): empty): T).p: empty);
               ^^ [1]
   expression.js:21:14
   21| ((((a = 42): empty): T).p: empty);
                    ^^^^^ [2]


Error ----------------------------------------------------------------------------------------------- expression.js:22:2

Cannot cast `(a >>>= 42).p` to empty because mixed [1] is incompatible with empty [2].

   expression.js:22:2
   22| ((((a >>>= 42): empty): T).p: empty);
        ^^^^^^^^^^^^^^^^^^^^^^^^^^^

References:
   expression.js:6:14
    6| type T = {p: mixed};
                    ^^^^^ [1]
   expression.js:22:31
   22| ((((a >>>= 42): empty): T).p: empty);
                                     ^^^^^ [2]


Error ----------------------------------------------------------------------------------------------- expression.js:22:5

Cannot cast `a >>>= 42` to empty because number [1] is incompatible with empty [2].

   expression.js:22:5
   22| ((((a >>>= 42): empty): T).p: empty);
           ^^^^^^^^^

References:
   expression.js:21:9
   21| ((((a = 42): empty): T).p: empty);
               ^^ [1]
   expression.js:22:17
   22| ((((a >>>= 42): empty): T).p: empty);
                       ^^^^^ [2]


Error ----------------------------------------------------------------------------------------------- expression.js:23:2

Cannot cast `({...} = {...}).p` to empty because mixed [1] is incompatible with empty [2].

   expression.js:23:2
   23| (((({a} = {a: 42}): empty): T).p: empty);
        ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

References:
   expression.js:6:14
    6| type T = {p: mixed};
                    ^^^^^ [1]
   expression.js:23:35
   23| (((({a} = {a: 42}): empty): T).p: empty);
                                         ^^^^^ [2]


Error ----------------------------------------------------------------------------------------------- expression.js:23:5

Cannot cast `{...} = {...}` to empty because object literal [1] is incompatible with empty [2].

   expression.js:23:5
   23| (((({a} = {a: 42}): empty): T).p: empty);
           ^^^^^^^^^^^^^

References:
   expression.js:23:11
   23| (((({a} = {a: 42}): empty): T).p: empty);
                 ^^^^^^^ [1]
   expression.js:23:21
   23| (((({a} = {a: 42}): empty): T).p: empty);
                           ^^^^^ [2]


Error ----------------------------------------------------------------------------------------------- expression.js:24:2

Cannot cast `([...] = [...]).p` to empty because mixed [1] is incompatible with empty [2].

   expression.js:24:2
   24| (((([a] = [42]): empty): T).p: empty);
        ^^^^^^^^^^^^^^^^^^^^^^^^^^^^

References:
   expression.js:6:14
    6| type T = {p: mixed};
                    ^^^^^ [1]
   expression.js:24:32
   24| (((([a] = [42]): empty): T).p: empty);
                                      ^^^^^ [2]


Error ----------------------------------------------------------------------------------------------- expression.js:24:5

Cannot cast `[...] = [...]` to empty because array literal [1] is incompatible with empty [2].

   expression.js:24:5
   24| (((([a] = [42]): empty): T).p: empty);
           ^^^^^^^^^^

References:
   expression.js:24:11
   24| (((([a] = [42]): empty): T).p: empty);
                 ^^^^ [1]
   expression.js:24:18
   24| (((([a] = [42]): empty): T).p: empty);
                        ^^^^^ [2]


Error ----------------------------------------------------------------------------------------------- expression.js:25:2

Cannot cast `(a = a = 42).p` to empty because mixed [1] is incompatible with empty [2].

   expression.js:25:2
   25| ((((a = a = 42): empty): T).p: empty);
        ^^^^^^^^^^^^^^^^^^^^^^^^^^^^

References:
   expression.js:6:14
    6| type T = {p: mixed};
                    ^^^^^ [1]
   expression.js:25:32
   25| ((((a = a = 42): empty): T).p: empty);
                                      ^^^^^ [2]


Error ----------------------------------------------------------------------------------------------- expression.js:25:5

Cannot cast `a = a = 42` to empty because number [1] is incompatible with empty [2].

   expression.js:25:5
   25| ((((a = a = 42): empty): T).p: empty);
           ^^^^^^^^^^

References:
   expression.js:25:13
   25| ((((a = a = 42): empty): T).p: empty);
                   ^^ [1]
   expression.js:25:18
   25| ((((a = a = 42): empty): T).p: empty);
                        ^^^^^ [2]


Error ----------------------------------------------------------------------------------------------- expression.js:26:2

Cannot cast `(1 + 2).p` to empty because mixed [1] is incompatible with empty [2].

   expression.js:26:2
   26| (((1 + 2: empty): T).p: empty);
        ^^^^^^^^^^^^^^^^^^^^^

References:
   expression.js:6:14
    6| type T = {p: mixed};
                    ^^^^^ [1]
   expression.js:26:25
   26| (((1 + 2: empty): T).p: empty);
                               ^^^^^ [2]


Error ----------------------------------------------------------------------------------------------- expression.js:26:4

Cannot cast `1 + 2` to empty because number [1] is incompatible with empty [2].

   expression.js:26:4
   26| (((1 + 2: empty): T).p: empty);
          ^^^^^ [1]

References:
   expression.js:26:11
   26| (((1 + 2: empty): T).p: empty);
                 ^^^^^ [2]


Error ----------------------------------------------------------------------------------------------- expression.js:27:2

Cannot cast `(1 + 2 + 3).p` to empty because mixed [1] is incompatible with empty [2].

   expression.js:27:2
   27| (((1 + 2 + 3: empty): T).p: empty);
        ^^^^^^^^^^^^^^^^^^^^^^^^^

References:
   expression.js:6:14
    6| type T = {p: mixed};
                    ^^^^^ [1]
   expression.js:27:29
   27| (((1 + 2 + 3: empty): T).p: empty);
                                   ^^^^^ [2]


Error ----------------------------------------------------------------------------------------------- expression.js:27:4

Cannot cast `1 + 2 + 3` to empty because number [1] is incompatible with empty [2].

   expression.js:27:4
   27| (((1 + 2 + 3: empty): T).p: empty);
          ^^^^^^^^^ [1]

References:
   expression.js:27:15
   27| (((1 + 2 + 3: empty): T).p: empty);
                     ^^^^^ [2]


Error ----------------------------------------------------------------------------------------------- expression.js:28:2

Cannot cast `(1 - (2 + 3)).p` to empty because mixed [1] is incompatible with empty [2].

   expression.js:28:2
   28| (((1 - (2 + 3): empty): T).p: empty);
        ^^^^^^^^^^^^^^^^^^^^^^^^^^^

References:
   expression.js:6:14
    6| type T = {p: mixed};
                    ^^^^^ [1]
   expression.js:28:31
   28| (((1 - (2 + 3): empty): T).p: empty);
                                     ^^^^^ [2]


Error ----------------------------------------------------------------------------------------------- expression.js:28:4

Cannot cast `1 - (2 + 3)` to empty because number [1] is incompatible with empty [2].

   expression.js:28:4
   28| (((1 - (2 + 3): empty): T).p: empty);
          ^^^^^^^^^^^ [1]

References:
   expression.js:28:17
   28| (((1 - (2 + 3): empty): T).p: empty);
                       ^^^^^ [2]


Error ----------------------------------------------------------------------------------------------- expression.js:29:2

Cannot cast `((1 + 2) * (3 + 4)).p` to empty because mixed [1] is incompatible with empty [2].

   expression.js:29:2
   29| ((((1 + 2) * (3 + 4): empty): T).p: empty);
        ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

References:
   expression.js:6:14
    6| type T = {p: mixed};
                    ^^^^^ [1]
   expression.js:29:37
   29| ((((1 + 2) * (3 + 4): empty): T).p: empty);
                                           ^^^^^ [2]


Error ----------------------------------------------------------------------------------------------- expression.js:29:4

Cannot cast `(1 + 2) * (3 + 4)` to empty because number [1] is incompatible with empty [2].

   expression.js:29:4
   29| ((((1 + 2) * (3 + 4): empty): T).p: empty);
          ^^^^^^^^^^^^^^^^^ [1]

References:
   expression.js:29:23
   29| ((((1 + 2) * (3 + 4): empty): T).p: empty);
                             ^^^^^ [2]


Error ----------------------------------------------------------------------------------------------- expression.js:30:2

Cannot cast `(1 + (2 * (3 + 4))).p` to empty because mixed [1] is incompatible with empty [2].

   expression.js:30:2
   30| (((1 + 2 * (3 + 4): empty): T).p: empty);
        ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

References:
   expression.js:6:14
    6| type T = {p: mixed};
                    ^^^^^ [1]
   expression.js:30:35
   30| (((1 + 2 * (3 + 4): empty): T).p: empty);
                                         ^^^^^ [2]


Error ----------------------------------------------------------------------------------------------- expression.js:30:4

Cannot cast `1 + (2 * (3 + 4))` to empty because number [1] is incompatible with empty [2].

   expression.js:30:4
   30| (((1 + 2 * (3 + 4): empty): T).p: empty);
          ^^^^^^^^^^^^^^^ [1]

References:
   expression.js:30:21
   30| (((1 + 2 * (3 + 4): empty): T).p: empty);
                           ^^^^^ [2]


Error ----------------------------------------------------------------------------------------------- expression.js:31:2

Cannot cast `f().p` to empty because mixed [1] is incompatible with empty [2].

   expression.js:31:2
   31| (((f(): empty): T).p: empty);
        ^^^^^^^^^^^^^^^^^^^

References:
   expression.js:6:14
    6| type T = {p: mixed};
                    ^^^^^ [1]
   expression.js:31:23
   31| (((f(): empty): T).p: empty);
                             ^^^^^ [2]


Error ----------------------------------------------------------------------------------------------- expression.js:31:4

Cannot cast `f()` to empty because mixed [1] is incompatible with empty [2].

   expression.js:31:4
   31| (((f(): empty): T).p: empty);
          ^^^

References:
   expression.js:9:23
    9| const f = (x: mixed): mixed => x;
                             ^^^^^ [1]
   expression.js:31:9
   31| (((f(): empty): T).p: empty);
               ^^^^^ [2]


Error ----------------------------------------------------------------------------------------------- expression.js:32:2

Cannot cast `f(...).p` to empty because mixed [1] is incompatible with empty [2].

   expression.js:32:2
   32| (((f(42): empty): T).p: empty);
        ^^^^^^^^^^^^^^^^^^^^^

References:
   expression.js:6:14
    6| type T = {p: mixed};
                    ^^^^^ [1]
   expression.js:32:25
   32| (((f(42): empty): T).p: empty);
                               ^^^^^ [2]


Error ----------------------------------------------------------------------------------------------- expression.js:32:4

Cannot cast `f(...)` to empty because mixed [1] is incompatible with empty [2].

   expression.js:32:4
   32| (((f(42): empty): T).p: empty);
          ^^^^^

References:
   expression.js:9:23
    9| const f = (x: mixed): mixed => x;
                             ^^^^^ [1]
   expression.js:32:11
   32| (((f(42): empty): T).p: empty);
                 ^^^^^ [2]


Error ----------------------------------------------------------------------------------------------- expression.js:33:2

Cannot cast `class { ... }.p` to empty because mixed [1] is incompatible with empty [2].

   expression.js:33:2
   33| (((class {}: empty): T).p: empty);
        ^^^^^^^^^^^^^^^^^^^^^^^^

References:
   expression.js:6:14
    6| type T = {p: mixed};
                    ^^^^^ [1]
   expression.js:33:28
   33| (((class {}: empty): T).p: empty);
                                  ^^^^^ [2]


Error ----------------------------------------------------------------------------------------------- expression.js:33:4

Cannot cast `class { ... }` to empty because class `<<anonymous class>>` [1] is incompatible with empty [2].

   expression.js:33:4
   33| (((class {}: empty): T).p: empty);
          ^^^^^^^^ [1]

References:
   expression.js:33:14
   33| (((class {}: empty): T).p: empty);
                    ^^^^^ [2]


Error ----------------------------------------------------------------------------------------------- expression.js:34:2

Cannot cast `(1 ? 2 : 3).p` to empty because mixed [1] is incompatible with empty [2].

   expression.js:34:2
   34| ((((1 ? 2 : 3): empty): T).p: empty);
        ^^^^^^^^^^^^^^^^^^^^^^^^^^^

References:
   expression.js:6:14
    6| type T = {p: mixed};
                    ^^^^^ [1]
   expression.js:34:31
   34| ((((1 ? 2 : 3): empty): T).p: empty);
                                     ^^^^^ [2]


Error ----------------------------------------------------------------------------------------------- expression.js:34:5

Cannot cast `1 ? 2 : 3` to empty because number [1] is incompatible with empty [2].

   expression.js:34:5
   34| ((((1 ? 2 : 3): empty): T).p: empty);
           ^^^^^^^^^

References:
   expression.js:34:9
   34| ((((1 ? 2 : 3): empty): T).p: empty);
               ^ [1]
   expression.js:34:17
   34| ((((1 ? 2 : 3): empty): T).p: empty);
                       ^^^^^ [2]


Error ----------------------------------------------------------------------------------------------- expression.js:34:5

Cannot cast `1 ? 2 : 3` to empty because number [1] is incompatible with empty [2].

   expression.js:34:5
   34| ((((1 ? 2 : 3): empty): T).p: empty);
           ^^^^^^^^^

References:
   expression.js:34:13
   34| ((((1 ? 2 : 3): empty): T).p: empty);
                   ^ [1]
   expression.js:34:17
   34| ((((1 ? 2 : 3): empty): T).p: empty);
                       ^^^^^ [2]


Error ----------------------------------------------------------------------------------------------- expression.js:35:2

Cannot cast `((1 ? 2 : 3) ? 4 : 5).p` to empty because mixed [1] is incompatible with empty [2].

   expression.js:35:2
   35| (((((1 ? 2 : 3) ? 4 : 5): empty): T).p: empty);
        ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

References:
   expression.js:6:14
    6| type T = {p: mixed};
                    ^^^^^ [1]
   expression.js:35:41
   35| (((((1 ? 2 : 3) ? 4 : 5): empty): T).p: empty);
                                               ^^^^^ [2]


Error ----------------------------------------------------------------------------------------------- expression.js:35:5

Cannot cast `(1 ? 2 : 3) ? 4 : 5` to empty because number [1] is incompatible with empty [2].

   expression.js:35:5
   35| (((((1 ? 2 : 3) ? 4 : 5): empty): T).p: empty);
           ^^^^^^^^^^^^^^^^^^^

References:
   expression.js:35:19
   35| (((((1 ? 2 : 3) ? 4 : 5): empty): T).p: empty);
                         ^ [1]
   expression.js:35:27
   35| (((((1 ? 2 : 3) ? 4 : 5): empty): T).p: empty);
                                 ^^^^^ [2]


Error ----------------------------------------------------------------------------------------------- expression.js:35:5

Cannot cast `(1 ? 2 : 3) ? 4 : 5` to empty because number [1] is incompatible with empty [2].

   expression.js:35:5
   35| (((((1 ? 2 : 3) ? 4 : 5): empty): T).p: empty);
           ^^^^^^^^^^^^^^^^^^^

References:
   expression.js:35:23
   35| (((((1 ? 2 : 3) ? 4 : 5): empty): T).p: empty);
                             ^ [1]
   expression.js:35:27
   35| (((((1 ? 2 : 3) ? 4 : 5): empty): T).p: empty);
                                 ^^^^^ [2]


Error ----------------------------------------------------------------------------------------------- expression.js:36:2

Cannot cast `function () { ... }.p` to empty because mixed [1] is incompatible with empty [2].

   expression.js:36:2
   36| (((function() {}: empty): T).p: empty);
        ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

References:
   expression.js:6:14
    6| type T = {p: mixed};
                    ^^^^^ [1]
   expression.js:36:33
   36| (((function() {}: empty): T).p: empty);
                                       ^^^^^ [2]


Error ----------------------------------------------------------------------------------------------- expression.js:36:4

Cannot cast function to empty because function [1] is incompatible with empty [2].

   expression.js:36:4
   36| (((function() {}: empty): T).p: empty);
          ^^^^^^^^^^^^^

References:
   expression.js:36:4
   36| (((function() {}: empty): T).p: empty);
          ^^^^^^^^^^ [1]
   expression.js:36:19
   36| (((function() {}: empty): T).p: empty);
                         ^^^^^ [2]


Error ----------------------------------------------------------------------------------------------- expression.js:37:2

Cannot cast `a.p` to empty because mixed [1] is incompatible with empty [2].

   expression.js:37:2
   37| (((a: empty): T).p: empty);
        ^^^^^^^^^^^^^^^^^

References:
   expression.js:6:14
    6| type T = {p: mixed};
                    ^^^^^ [1]
   expression.js:37:21
   37| (((a: empty): T).p: empty);
                           ^^^^^ [2]


Error ----------------------------------------------------------------------------------------------- expression.js:37:4

Cannot cast `a` to empty because number [1] is incompatible with empty [2].

   expression.js:37:4
   37| (((a: empty): T).p: empty);
          ^

References:
   expression.js:25:13
   25| ((((a = a = 42): empty): T).p: empty);
                   ^^ [1]
   expression.js:37:7
   37| (((a: empty): T).p: empty);
             ^^^^^ [2]


Error ----------------------------------------------------------------------------------------------- expression.js:38:2

Cannot cast `import('fs').p` to empty because mixed [1] is incompatible with empty [2].

   expression.js:38:2
   38| (((import('fs'): empty): T).p: empty);
        ^^^^^^^^^^^^^^^^^^^^^^^^^^^^

References:
   expression.js:6:14
    6| type T = {p: mixed};
                    ^^^^^ [1]
   expression.js:38:32
   38| (((import('fs'): empty): T).p: empty);
                                      ^^^^^ [2]


Error ----------------------------------------------------------------------------------------------- expression.js:38:4

Cannot cast `import('fs')` to empty because `Promise` [1] is incompatible with empty [2].

   expression.js:38:4
   38| (((import('fs'): empty): T).p: empty);
          ^^^^^^^^^^^^ [1]

References:
   expression.js:38:18
   38| (((import('fs'): empty): T).p: empty);
                        ^^^^^ [2]


Error ---------------------------------------------------------------------------------------------- expression.js:38:11

Cannot resolve module `fs`.

   38| (((import('fs'): empty): T).p: empty);
                 ^^^^


Error ----------------------------------------------------------------------------------------------- expression.js:39:2

Cannot cast `<MyComponent />.p` to empty because mixed [1] is incompatible with empty [2].

   expression.js:39:2
   39| (((<MyComponent />: empty): T).p: empty);
        ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

References:
   expression.js:6:14
    6| type T = {p: mixed};
                    ^^^^^ [1]
   expression.js:39:35
   39| (((<MyComponent />: empty): T).p: empty);
                                         ^^^^^ [2]


Error ----------------------------------------------------------------------------------------------- expression.js:39:4

Cannot resolve name `React$Element`.

   39| (((<MyComponent />: empty): T).p: empty);
          ^^^^^^^^^^^^^^^


Error ----------------------------------------------------------------------------------------------- expression.js:39:4

Cannot resolve name `React$Key`.

   39| (((<MyComponent />: empty): T).p: empty);
          ^^^^^^^^^^^^^^^


Error ----------------------------------------------------------------------------------------------- expression.js:39:4

Cannot resolve name `React$Node`.

   39| (((<MyComponent />: empty): T).p: empty);
          ^^^^^^^^^^^^^^^


Error ----------------------------------------------------------------------------------------------- expression.js:39:4

Cannot resolve name `React$Ref`.

   39| (((<MyComponent />: empty): T).p: empty);
          ^^^^^^^^^^^^^^^


Error ----------------------------------------------------------------------------------------------- expression.js:40:2

Cannot cast `<>...</>.p` to empty because mixed [1] is incompatible with empty [2].

   expression.js:40:2
   40| (((<>foo</>: empty): T).p: empty);
        ^^^^^^^^^^^^^^^^^^^^^^^^

References:
   expression.js:6:14
    6| type T = {p: mixed};
                    ^^^^^ [1]
   expression.js:40:28
   40| (((<>foo</>: empty): T).p: empty);
                                  ^^^^^ [2]


Error ----------------------------------------------------------------------------------------------- expression.js:40:4

Cannot get `React.Fragment` because property `Fragment` is missing in object type [1].

   expression.js:40:4
   40| (((<>foo</>: empty): T).p: empty);
          ^^

References:
   expression.js:12:20
   12| declare var React: {createElement: React$CreateElement};
                          ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ [1]


Error ----------------------------------------------------------------------------------------------- expression.js:40:4

Cannot resolve name `React$Key`.

   40| (((<>foo</>: empty): T).p: empty);
          ^^


Error ----------------------------------------------------------------------------------------------- expression.js:40:4

Cannot resolve name `React$Ref`.

   40| (((<>foo</>: empty): T).p: empty);
          ^^


Error ----------------------------------------------------------------------------------------------- expression.js:40:4

Cannot resolve name `React$Element`.

   40| (((<>foo</>: empty): T).p: empty);
          ^^^^^^^^


Error ----------------------------------------------------------------------------------------------- expression.js:41:2

Cannot cast `'foo'.p` to empty because mixed [1] is incompatible with empty [2].

   expression.js:41:2
   41| ((('foo': empty): T).p: empty);
        ^^^^^^^^^^^^^^^^^^^^^

References:
   expression.js:6:14
    6| type T = {p: mixed};
                    ^^^^^ [1]
   expression.js:41:25
   41| ((('foo': empty): T).p: empty);
                               ^^^^^ [2]


Error ----------------------------------------------------------------------------------------------- expression.js:41:4

Cannot cast `'foo'` to empty because string [1] is incompatible with empty [2].

   expression.js:41:4
   41| ((('foo': empty): T).p: empty);
          ^^^^^ [1]

References:
   expression.js:41:11
   41| ((('foo': empty): T).p: empty);
                 ^^^^^ [2]


Error ----------------------------------------------------------------------------------------------- expression.js:42:2

Cannot cast `'abcdefghij...'.p` to empty because mixed [1] is incompatible with empty [2].

   expression.js:42:2
   42| ((('abcdefghijklmnopqrstuvwxyz': empty): T).p: empty);
        ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

References:
   expression.js:6:14
    6| type T = {p: mixed};
                    ^^^^^ [1]
   expression.js:42:48
   42| ((('abcdefghijklmnopqrstuvwxyz': empty): T).p: empty);
                                                      ^^^^^ [2]


Error ----------------------------------------------------------------------------------------------- expression.js:42:4

Cannot cast `'abcdefghij...'` to empty because string [1] is incompatible with empty [2].

   expression.js:42:4
   42| ((('abcdefghijklmnopqrstuvwxyz': empty): T).p: empty);
          ^^^^^^^^^^^^^^^^^^^^^^^^^^^^ [1]

References:
   expression.js:42:34
   42| ((('abcdefghijklmnopqrstuvwxyz': empty): T).p: empty);
                                        ^^^^^ [2]


Error ----------------------------------------------------------------------------------------------- expression.js:43:2

Cannot cast `42.p` to empty because mixed [1] is incompatible with empty [2].

   expression.js:43:2
   43| (((42: empty): T).p: empty);
        ^^^^^^^^^^^^^^^^^^

References:
   expression.js:6:14
    6| type T = {p: mixed};
                    ^^^^^ [1]
   expression.js:43:22
   43| (((42: empty): T).p: empty);
                            ^^^^^ [2]


Error ----------------------------------------------------------------------------------------------- expression.js:43:4

Cannot cast `42` to empty because number [1] is incompatible with empty [2].

   expression.js:43:4
   43| (((42: empty): T).p: empty);
          ^^ [1]

References:
   expression.js:43:8
   43| (((42: empty): T).p: empty);
              ^^^^^ [2]


Error ----------------------------------------------------------------------------------------------- expression.js:44:2

Cannot cast `true.p` to empty because mixed [1] is incompatible with empty [2].

   expression.js:44:2
   44| (((true: empty): T).p: empty);
        ^^^^^^^^^^^^^^^^^^^^

References:
   expression.js:6:14
    6| type T = {p: mixed};
                    ^^^^^ [1]
   expression.js:44:24
   44| (((true: empty): T).p: empty);
                              ^^^^^ [2]


Error ----------------------------------------------------------------------------------------------- expression.js:44:4

Cannot cast `true` to empty because boolean [1] is incompatible with empty [2].

   expression.js:44:4
   44| (((true: empty): T).p: empty);
          ^^^^ [1]

References:
   expression.js:44:10
   44| (((true: empty): T).p: empty);
                ^^^^^ [2]


Error ----------------------------------------------------------------------------------------------- expression.js:45:2

Cannot cast `false.p` to empty because mixed [1] is incompatible with empty [2].

   expression.js:45:2
   45| (((false: empty): T).p: empty);
        ^^^^^^^^^^^^^^^^^^^^^

References:
   expression.js:6:14
    6| type T = {p: mixed};
                    ^^^^^ [1]
   expression.js:45:25
   45| (((false: empty): T).p: empty);
                               ^^^^^ [2]


Error ----------------------------------------------------------------------------------------------- expression.js:45:4

Cannot cast `false` to empty because boolean [1] is incompatible with empty [2].

   expression.js:45:4
   45| (((false: empty): T).p: empty);
          ^^^^^ [1]

References:
   expression.js:45:11
   45| (((false: empty): T).p: empty);
                 ^^^^^ [2]


Error ----------------------------------------------------------------------------------------------- expression.js:46:2

Cannot cast `null.p` to empty because mixed [1] is incompatible with empty [2].

   expression.js:46:2
   46| (((null: empty): T).p: empty);
        ^^^^^^^^^^^^^^^^^^^^

References:
   expression.js:6:14
    6| type T = {p: mixed};
                    ^^^^^ [1]
   expression.js:46:24
   46| (((null: empty): T).p: empty);
                              ^^^^^ [2]


Error ----------------------------------------------------------------------------------------------- expression.js:46:4

Cannot cast `null` to empty because null [1] is incompatible with empty [2].

   expression.js:46:4
   46| (((null: empty): T).p: empty);
          ^^^^ [1]

References:
   expression.js:46:10
   46| (((null: empty): T).p: empty);
                ^^^^^ [2]


Error ----------------------------------------------------------------------------------------------- expression.js:47:2

Cannot cast `o.p.p` to empty because mixed [1] is incompatible with empty [2].

   expression.js:47:2
   47| (((o.p: empty): T).p: empty);
        ^^^^^^^^^^^^^^^^^^^

References:
   expression.js:6:14
    6| type T = {p: mixed};
                    ^^^^^ [1]
   expression.js:47:23
   47| (((o.p: empty): T).p: empty);
                             ^^^^^ [2]


Error ----------------------------------------------------------------------------------------------- expression.js:47:4

Cannot cast `o.p` to empty because number [1] is incompatible with empty [2].

   expression.js:47:4
   47| (((o.p: empty): T).p: empty);
          ^^^

References:
   expression.js:10:15
   10| const o = {p: 42};
                     ^^ [1]
   expression.js:47:9
   47| (((o.p: empty): T).p: empty);
               ^^^^^ [2]


Error ----------------------------------------------------------------------------------------------- expression.js:48:2

Cannot cast `(new f()).p` to empty because mixed [1] is incompatible with empty [2].

   expression.js:48:2
   48| (((new f(): empty): T).p: empty);
        ^^^^^^^^^^^^^^^^^^^^^^^

References:
   expression.js:6:14
    6| type T = {p: mixed};
                    ^^^^^ [1]
   expression.js:48:27
   48| (((new f(): empty): T).p: empty);
                                 ^^^^^ [2]


Error ----------------------------------------------------------------------------------------------- expression.js:48:4

Cannot cast `new f()` to empty because new object [1] is incompatible with empty [2].

   expression.js:48:4
   48| (((new f(): empty): T).p: empty);
          ^^^^^^^ [1]

References:
   expression.js:48:13
   48| (((new f(): empty): T).p: empty);
                   ^^^^^ [2]


Error ----------------------------------------------------------------------------------------------- expression.js:49:2

Cannot cast `(new f(...)).p` to empty because mixed [1] is incompatible with empty [2].

   expression.js:49:2
   49| (((new f(42): empty): T).p: empty);
        ^^^^^^^^^^^^^^^^^^^^^^^^^

References:
   expression.js:6:14
    6| type T = {p: mixed};
                    ^^^^^ [1]
   expression.js:49:29
   49| (((new f(42): empty): T).p: empty);
                                   ^^^^^ [2]


Error ----------------------------------------------------------------------------------------------- expression.js:49:4

Cannot cast `new f(...)` to empty because new object [1] is incompatible with empty [2].

   expression.js:49:4
   49| (((new f(42): empty): T).p: empty);
          ^^^^^^^^^ [1]

References:
   expression.js:49:15
   49| (((new f(42): empty): T).p: empty);
                     ^^^^^ [2]


Error ----------------------------------------------------------------------------------------------- expression.js:50:2

Cannot cast `{...}.p` to empty because mixed [1] is incompatible with empty [2].

   expression.js:50:2
   50| ((({}: empty): T).p: empty);
        ^^^^^^^^^^^^^^^^^^

References:
   expression.js:6:14
    6| type T = {p: mixed};
                    ^^^^^ [1]
   expression.js:50:22
   50| ((({}: empty): T).p: empty);
                            ^^^^^ [2]


Error ----------------------------------------------------------------------------------------------- expression.js:50:4

Cannot cast object literal to empty because object literal [1] is incompatible with empty [2].

   expression.js:50:4
   50| ((({}: empty): T).p: empty);
          ^^ [1]

References:
   expression.js:50:8
   50| ((({}: empty): T).p: empty);
              ^^^^^ [2]


Error ----------------------------------------------------------------------------------------------- expression.js:51:2

Cannot cast `3.p` to empty because mixed [1] is incompatible with empty [2].

   expression.js:51:2
   51| ((((1, 2, 3): empty): T).p: empty);
        ^^^^^^^^^^^^^^^^^^^^^^^^^

References:
   expression.js:6:14
    6| type T = {p: mixed};
                    ^^^^^ [1]
   expression.js:51:29
   51| ((((1, 2, 3): empty): T).p: empty);
                                   ^^^^^ [2]


Error ----------------------------------------------------------------------------------------------- expression.js:51:5

Cannot cast `3` to empty because number [1] is incompatible with empty [2].

   expression.js:51:5
   51| ((((1, 2, 3): empty): T).p: empty);
           ^^^^^^^

References:
   expression.js:51:11
   51| ((((1, 2, 3): empty): T).p: empty);
                 ^ [1]
   expression.js:51:15
   51| ((((1, 2, 3): empty): T).p: empty);
                     ^^^^^ [2]


Error ----------------------------------------------------------------------------------------------- expression.js:56:6

Cannot cast `super.m.p` to empty because mixed [1] is incompatible with empty [2].

   expression.js:56:6
   56|     (((super.m: empty): T).p: empty);
            ^^^^^^^^^^^^^^^^^^^^^^^

References:
   expression.js:6:14
    6| type T = {p: mixed};
                    ^^^^^ [1]
   expression.js:56:31
   56|     (((super.m: empty): T).p: empty);
                                     ^^^^^ [2]


Error ----------------------------------------------------------------------------------------------- expression.js:56:8

Cannot cast `super.m` to empty because function [1] is incompatible with empty [2].

   expression.js:56:8
   56|     (((super.m: empty): T).p: empty);
              ^^^^^^^

References:
   expression.js:53:3
   53|   m() {}
         ^^^^^^ [1]
   expression.js:56:17
   56|     (((super.m: empty): T).p: empty);
                       ^^^^^ [2]


Error ----------------------------------------------------------------------------------------------- expression.js:59:2

Cannot cast `f`...`.p` to empty because mixed [1] is incompatible with empty [2].

   expression.js:59:2
   59| (((f`foobar`: empty): T).p: empty);
        ^^^^^^^^^^^^^^^^^^^^^^^^^

References:
   expression.js:6:14
    6| type T = {p: mixed};
                    ^^^^^ [1]
   expression.js:59:29
   59| (((f`foobar`: empty): T).p: empty);
                                   ^^^^^ [2]


Error ----------------------------------------------------------------------------------------------- expression.js:59:4

Cannot cast template string to empty because mixed [1] is incompatible with empty [2].

   expression.js:59:4
   59| (((f`foobar`: empty): T).p: empty);
          ^^^^^^^^^

References:
   expression.js:9:23
    9| const f = (x: mixed): mixed => x;
                             ^^^^^ [1]
   expression.js:59:15
   59| (((f`foobar`: empty): T).p: empty);
                     ^^^^^ [2]


Error ----------------------------------------------------------------------------------------------- expression.js:60:2

Cannot cast ``...`.p` to empty because mixed [1] is incompatible with empty [2].

   expression.js:60:2
   60| (((`foobar`: empty): T).p: empty);
        ^^^^^^^^^^^^^^^^^^^^^^^^

References:
   expression.js:6:14
    6| type T = {p: mixed};
                    ^^^^^ [1]
   expression.js:60:28
   60| (((`foobar`: empty): T).p: empty);
                                  ^^^^^ [2]


Error ----------------------------------------------------------------------------------------------- expression.js:60:4

Cannot cast template string to empty because string [1] is incompatible with empty [2].

   expression.js:60:4
   60| (((`foobar`: empty): T).p: empty);
          ^^^^^^^^ [1]

References:
   expression.js:60:14
   60| (((`foobar`: empty): T).p: empty);
                    ^^^^^ [2]


Error ----------------------------------------------------------------------------------------------- expression.js:62:4

Cannot cast `this.p` to empty because mixed [1] is incompatible with empty [2].

   expression.js:62:4
   62|   (((this: empty): T).p: empty);
          ^^^^^^^^^^^^^^^^^^^^

References:
   expression.js:6:14
    6| type T = {p: mixed};
                    ^^^^^ [1]
   expression.js:62:26
   62|   (((this: empty): T).p: empty);
                                ^^^^^ [2]


Error ----------------------------------------------------------------------------------------------- expression.js:64:2

Cannot cast `42.p` to empty because mixed [1] is incompatible with empty [2].

   expression.js:64:2
   64| ((((42: string): empty): T).p: empty);
        ^^^^^^^^^^^^^^^^^^^^^^^^^^^^

References:
   expression.js:6:14
    6| type T = {p: mixed};
                    ^^^^^ [1]
   expression.js:64:32
   64| ((((42: string): empty): T).p: empty);
                                      ^^^^^ [2]


Error ----------------------------------------------------------------------------------------------- expression.js:64:5

Cannot cast `42` to string because number [1] is incompatible with string [2].

   expression.js:64:5
   64| ((((42: string): empty): T).p: empty);
           ^^ [1]

References:
   expression.js:64:9
   64| ((((42: string): empty): T).p: empty);
               ^^^^^^ [2]


Error ----------------------------------------------------------------------------------------------- expression.js:64:5

Cannot cast `42` to empty because string [1] is incompatible with empty [2].

   expression.js:64:5
   64| ((((42: string): empty): T).p: empty);
           ^^^^^^^^^^

References:
   expression.js:64:9
   64| ((((42: string): empty): T).p: empty);
               ^^^^^^ [1]
   expression.js:64:18
   64| ((((42: string): empty): T).p: empty);
                        ^^^^^ [2]


Error ----------------------------------------------------------------------------------------------- expression.js:65:2

Cannot cast `(-42).p` to empty because mixed [1] is incompatible with empty [2].

   expression.js:65:2
   65| (((-42: empty): T).p: empty);
        ^^^^^^^^^^^^^^^^^^^

References:
   expression.js:6:14
    6| type T = {p: mixed};
                    ^^^^^ [1]
   expression.js:65:23
   65| (((-42: empty): T).p: empty);
                             ^^^^^ [2]


Error ----------------------------------------------------------------------------------------------- expression.js:65:4

Cannot cast `-42` to empty because number [1] is incompatible with empty [2].

   expression.js:65:4
   65| (((-42: empty): T).p: empty);
          ^^^ [1]

References:
   expression.js:65:9
   65| (((-42: empty): T).p: empty);
               ^^^^^ [2]


Error ----------------------------------------------------------------------------------------------- expression.js:66:2

Cannot cast `(!42).p` to empty because mixed [1] is incompatible with empty [2].

   expression.js:66:2
   66| (((!42: empty): T).p: empty);
        ^^^^^^^^^^^^^^^^^^^

References:
   expression.js:6:14
    6| type T = {p: mixed};
                    ^^^^^ [1]
   expression.js:66:23
   66| (((!42: empty): T).p: empty);
                             ^^^^^ [2]


Error ----------------------------------------------------------------------------------------------- expression.js:66:4

Cannot cast `!42` to empty because boolean literal `false` [1] is incompatible with empty [2].

   expression.js:66:4
   66| (((!42: empty): T).p: empty);
          ^^^ [1]

References:
   expression.js:66:9
   66| (((!42: empty): T).p: empty);
               ^^^^^ [2]


Error ----------------------------------------------------------------------------------------------- expression.js:67:2

Cannot cast `(++a).p` to empty because mixed [1] is incompatible with empty [2].

   expression.js:67:2
   67| (((++a: empty): T).p: empty);
        ^^^^^^^^^^^^^^^^^^^

References:
   expression.js:6:14
    6| type T = {p: mixed};
                    ^^^^^ [1]
   expression.js:67:23
   67| (((++a: empty): T).p: empty);
                             ^^^^^ [2]


Error ----------------------------------------------------------------------------------------------- expression.js:67:4

Cannot cast `++a` to empty because number [1] is incompatible with empty [2].

   expression.js:67:4
   67| (((++a: empty): T).p: empty);
          ^^^ [1]

References:
   expression.js:67:9
   67| (((++a: empty): T).p: empty);
               ^^^^^ [2]


Error ----------------------------------------------------------------------------------------------- expression.js:68:2

Cannot cast `(a++).p` to empty because mixed [1] is incompatible with empty [2].

   expression.js:68:2
   68| (((a++: empty): T).p: empty);
        ^^^^^^^^^^^^^^^^^^^

References:
   expression.js:6:14
    6| type T = {p: mixed};
                    ^^^^^ [1]
   expression.js:68:23
   68| (((a++: empty): T).p: empty);
                             ^^^^^ [2]


Error ----------------------------------------------------------------------------------------------- expression.js:68:4

Cannot cast `a++` to empty because number [1] is incompatible with empty [2].

   expression.js:68:4
   68| (((a++: empty): T).p: empty);
          ^^^ [1]

References:
   expression.js:68:9
   68| (((a++: empty): T).p: empty);
               ^^^^^ [2]


Error ----------------------------------------------------------------------------------------------- expression.js:70:4

Cannot cast `yield.p` to empty because mixed [1] is incompatible with empty [2].

   expression.js:70:4
   70|   (((yield: empty): T).p: empty);
          ^^^^^^^^^^^^^^^^^^^^^

References:
   expression.js:6:14
    6| type T = {p: mixed};
                    ^^^^^ [1]
   expression.js:70:27
   70|   (((yield: empty): T).p: empty);
                                 ^^^^^ [2]


Error ----------------------------------------------------------------------------------------------- expression.js:70:6

Cannot cast `yield` to empty because number [1] is incompatible with empty [2].

   expression.js:70:6
   70|   (((yield: empty): T).p: empty);
            ^^^^^

References:
   expression.js:69:48
   69| function* g1(): Generator<number | void, void, number> {
                                                      ^^^^^^ [1]
   expression.js:70:13
   70|   (((yield: empty): T).p: empty);
                   ^^^^^ [2]


Error ----------------------------------------------------------------------------------------------- expression.js:71:4

Cannot cast `(yield 42).p` to empty because mixed [1] is incompatible with empty [2].

   expression.js:71:4
   71|   (((yield 42: empty): T).p: empty);
          ^^^^^^^^^^^^^^^^^^^^^^^^

References:
   expression.js:6:14
    6| type T = {p: mixed};
                    ^^^^^ [1]
   expression.js:71:30
   71|   (((yield 42: empty): T).p: empty);
                                    ^^^^^ [2]


Error ----------------------------------------------------------------------------------------------- expression.js:71:6

Cannot cast `yield 42` to empty because number [1] is incompatible with empty [2].

   expression.js:71:6
   71|   (((yield 42: empty): T).p: empty);
            ^^^^^^^^

References:
   expression.js:69:48
   69| function* g1(): Generator<number | void, void, number> {
                                                      ^^^^^^ [1]
   expression.js:71:16
   71|   (((yield 42: empty): T).p: empty);
                      ^^^^^ [2]


Error ----------------------------------------------------------------------------------------------- expression.js:74:4

Cannot cast `(yield* g1()).p` to empty because mixed [1] is incompatible with empty [2].

   expression.js:74:4
   74|   (((yield* g1(): empty): T).p: empty);
          ^^^^^^^^^^^^^^^^^^^^^^^^^^^

References:
   expression.js:6:14
    6| type T = {p: mixed};
                    ^^^^^ [1]
   expression.js:74:33
   74|   (((yield* g1(): empty): T).p: empty);
                                       ^^^^^ [2]


Error ----------------------------------------------------------------------------------------------- expression.js:74:6

Cannot cast `yield* g1()` to empty because undefined [1] is incompatible with empty [2].

   expression.js:74:6
   74|   (((yield* g1(): empty): T).p: empty);
            ^^^^^^^^^^^

References:
   expression.js:69:42
   69| function* g1(): Generator<number | void, void, number> {
                                                ^^^^ [1]
   expression.js:74:19
   74|   (((yield* g1(): empty): T).p: empty);
                         ^^^^^ [2]



Found 107 errors
